Fix col of text and image not aligned issue.

--- a/_sass/_post_grid_override.scss
+++ b/_sass/_post_grid_override.scss
@@ -12,6 +12,10 @@
     padding: 0 0.75rem;
   }
 
+  .row {
+    margin:1.8em auto 2.2em auto;
+  }
+
   .center {
     text-align: center;
   }
