--- a/_sass/_post_theme.scss
+++ b/_sass/_post_theme.scss
@@ -344,9 +344,6 @@
     padding-top:0.8em;
 
   }
-  img {
-    margin:1.8em auto 0;
-  }
 
 //------------------ end  @zhongshu -----------------------
 
